@@ -1,7 +1,7 @@
 #
 # default grub.cfg, local boot version (placed in linbo cache)
 # thomas@linuxmuster.net
-# 20170519
+# 20171106
 #
 
 set default=0
@@ -64,14 +64,22 @@ menuentry 'OS localboot' {
    echo
   fi
 
-  if [ "${reboot_grub}" ] ; then
+  if [ -n "${reboot_label}" ]; then
+   search --label "$reboot_label" --set tmproot
+  fi
+  if [ -n "${reboot_grub}" -a -z "${tmproot}" ]; then
+   set tmproot="${reboot_grub}"
+  fi
+
+  if [ -n "${tmproot}" ]; then
 
    echo Booting operating system ...
    echo
 
-   set tmproot="${reboot_grub}"
    set reboot_grub=""
+   set reboot_label=""
    save_env reboot_grub
+   save_env reboot_label
    set root="${tmproot}"
    set win_efiloader="/EFI/Microsoft/Boot/bootmgfw.efi"
 
